--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -36,6 +36,14 @@ small {
 	}
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+	.signUpForm {
+		width: 100%;
+		padding: 5px;
+		margin: 0;
+		border-radius: 0;
+	}
+}
 .error {
 	color: red;
 }
