--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
-	/* background-image: url('./Assets/2878902.jpg'); */
+	background-image: url('./Assets/news4.jpg');
 	background-color: #303952;
 	background-size: cover;
 	background-repeat: no-repeat;
-
-	/* background-image: image('./Assets/2878902.jpg'); */
 }
