--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -39,3 +39,11 @@ small {
 .error {
 	color: red;
 }
+
+.eyeSpan {
+	float: right;
+	margin-right: 6px;
+	margin-top: -40px;
+	position: relative;
+	z-index: 2;
+}
