--- a/src/components/full_page.css
+++ b/src/components/full_page.css
@@ -1,20 +1,20 @@
-/* .outerWrapper {
+.outerWrapper {
+	width: 50%;
+	margin: 0 auto;
+	background-color: #ffffff;
 	padding: 10px;
-	margin: auto 0;
-	background-color: grey;
-} */
+}
 .com {
-	background-color: white;
-	margin: 5px;
+	margin-top: 10px;
 }
 
 .category {
-	background-color: antiquewhite;
-	height: auto;
+	background-color: black;
+	color: #ffffff;
+	margin-left: 2%;
 }
 
 .title {
-	background-color: antiquewhite;
 	font: bold 1.6rem Arial;
 	text-transform: capitalize;
 }
@@ -26,5 +26,29 @@
 	font: 20px 0.9rem Arial;
 }
 
-.newsImage {
+.newsImage img {
+	height: auto;
+	width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+	.outerWrapper {
+		width: 100%;
+	}
+}
+
+.shareAndReportButton {
+	float: right;
+	margin: 1%;
+	color: black;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	overflow: hidden;
+	outline: none;
+}
+
+.shareAndReportButton:hover {
+	background-color: lightgrey;
+	color: black;
 }
